--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,21 +41,16 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-
-	<!--Face ID-->
 	<key>NSFaceIDUsageDescription</key>
 	<string>Demo requires Face ID for local auth demonstration</string>
-	<!---->
-
-	<!--Facebook Login-->
 	<key>CFBundleURLTypes</key>
 	<array>
-	<dict>
-	<key>CFBundleURLSchemes</key>
-	<array>
-		<string>fb712957812867959</string>
-	</array>
-	</dict>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb712957812867959</string>
+			</array>
+		</dict>
 	</array>
 	<key>FacebookAppID</key>
 	<string>712957812867959</string>
@@ -63,22 +58,27 @@
 	<string>POS Labs Demo</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
-	<string>fbapi</string>
-	<string>fbapi20130214</string>
-	<string>fbapi20130410</string>
-	<string>fbapi20130702</string>
-	<string>fbapi20131010</string>
-	<string>fbapi20131219</string>
-	<string>fbapi20140410</string>
-	<string>fbapi20140116</string>
-	<string>fbapi20150313</string>
-	<string>fbapi20150629</string>
-	<string>fbapi20160328</string>
-	<string>fbauth</string>
-	<string>fb-messenger-share-api</string>
-	<string>fbauth2</string>
-	<string>fbshareextension</string>
+		<string>fbapi</string>
+		<string>fbapi20130214</string>
+		<string>fbapi20130410</string>
+		<string>fbapi20130702</string>
+		<string>fbapi20131010</string>
+		<string>fbapi20131219</string>
+		<string>fbapi20140410</string>
+		<string>fbapi20140116</string>
+		<string>fbapi20150313</string>
+		<string>fbapi20150629</string>
+		<string>fbapi20160328</string>
+		<string>fbauth</string>
+		<string>fb-messenger-share-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
 	</array>
-	<!---->
+	<key>NSLocationUsageDescription</key>
+	<string>Demo requires location permission for Google Maps integration</string>
+	<key>io.flutter.embedded_views_preview</key>
+	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Demo requires location permission for Google Maps integration</string>
 </dict>
 </plist>
