--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,4 +53,8 @@ flutter {
     source '../..'
 }
 
+dependencies {
+    implementation 'com.google.firebase:firebase-messaging:17.4.2'
+}
+
 apply plugin: 'com.google.gms.google-services'
