--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_messaging: ^6.0.16
   local_auth: ^0.6.2
   location: ^3.0.2
+  logging: ^0.11.4
 
 dev_dependencies:
   flutter_test:
